# imgserve

./: .gitignore  Dockerfile  README  README.md  build.sh  colorgrams.sh  debian-install.sh  env-stub  experiment.sh  pad.py  process.sh  pyproject.toml  server.py
app/: .gitignore  00-imgserve-web-secret.sh  01-experiment-csvs.sh  01-web.yml  02-basic-auth-secret.sh  02-ingress.yml  03-ingress.yml  03-web.yml  10-ingress.yml  Dockerfile  README.md  TODO  pad.py  server.py  up.sh  vectors.py
app/static/css/: styles.css
app/static/img/: .gitignore
app/static/js/: forms.js  websocket.js
app/templates/: 404.html  base.html  experiment.html  get.html  home.html  image.html  index.html  langip.html  results.html  search.html  sketch.html
app/tests/: test_websocket.py
batch/: trial.sh
db/: colorgrams.template.json  cropped-face-images.template.json  hosts.template.json  images.template.json  mturk-answers.template.json  mturk-hits.template.json  raw-images.template.json
experiment/: .gitignore  01-unrest.yml  02-top-100-wikipedia.yml  Dockerfile  xx-bft-2020.yml  xx-bias-fairness-transparency.yml
process/: args.py  assemble.py  process.py  vectors.py
src/imgserve/: __init__.py  api.py  args.py  assemble.py  clients.py  elasticsearch.py  errors.py  es_client.py  faces.py  gather.py  logger.py  mturk.py  pathtree.py  s3.py  trial.py  utils.py  vectors.py
static/css/: styles.css
templates/: home.html  index.html  langip.html  pages.html
tests/: 01-test-experiment-run-trial-workflow.yml  test-experiment-run-trial.yml  test-web.yml  test-websocket.py  test_facechop.py  test_similarity.py  test_utils.py
