[tool.poetry]
name = "imgserve"
version = "1.0.0"
description = ""
authors = ["mgraskertheband <theband@mgrasker.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
starlette = "^0.13.3"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
elasticsearch = "^7.6.0"
compsyn = { file = "./dist/compsyn-0.2.1-py3-none-any.whl" }
boto3 = "^1.13.5"
elasticsearch_dsl = "^7.2.0"
pytest = "^5.4.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
