[tool.poetry]
name = "imgserve"
version = "2.2.0"
description = "Loop experiments involving the internet and humans"
authors = ["Loop Fellow <loops@ialcloud.xyz>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.3"
starlette = "^0.25.0"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
elasticsearch = "^7.6.0"
compsyn = { git = "https://github.com/comp-syn/comp-syn.git", rev = "ca1c0d1a81e7ef0d06a3673e8f88fa20206abd2c" }
boto3 = "^1.13.5"
elasticsearch_dsl = "^7.2.0"
pytest = "^5.4.2"
python-rapidjson = "^0.9.1"
requests = "^2.23.0"
retry = "^0.9.2"
opencv-python = "^4.4.0"
imagehash = "^4.1.0"
imgcat = "^0.5.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
IPython = "^7.14.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
